--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </head>
   <body>
+    <h1>Guess the pokemon</h1>
+    <div id="starting">
+    <div id ="pokedex">
+      <p>Brush up on your Pokemon knowledge before playing</p>
+      <form id="pokedexDetails">
+        <label name="details">Enter a Pokemon ID from 1 to 150</label><br>
+        <input type="number"name ="details" min ="1" max="150" id="details"><br><br>
+        <input type="submit" id="learnMore" value ="Learn more">
+      </form>
+      <div id="showPokemon">
+        <div class="pname"></div>
+        <div class="images">
+          <img class="image">
+          <img class="image-2">
+        </div>
+        <div class="type"></div>
+      </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
     <script src="scripts/jquery.js"></script>
     <script src="scripts/script.js"></script>
