--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </head>
   <body>
+    <br>
+    <img class="logo" src="images/pokemon-logo.png">
+    <br>
     <h1>Guess the pokemon</h1>
     <div id="starting">
     <div id ="pokedex">
