added pokemon images

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
       <button id="next">Skip</button>
       <button id="reset">Play again</button>
     </div>
+    <div id="bouncy">
+      <img id="pikachu" class="bounce" src="images/pikachu.png">
+      <img id="charmander" class="bounce" src="images/charmander.png">
+      <img id="bulbasaur" class="bounce" src="images/bulbasaur.png">
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
     <script src="scripts/jquery.js"></script>
     <script src="scripts/script.js"></script>
