--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <img id="pikachu" class="bounce" src="images/pikachu.png">
       <img id="charmander" class="bounce" src="images/charmander.png">
       <img id="bulbasaur" class="bounce" src="images/bulbasaur.png">
-      <img id="squirtle" class="bounce" src="images/squirtle.jpg">
+      <img id="squirtle" class="bounce" src="images/squirtle.png">
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
     <script src="scripts/jquery.js"></script>
