--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Guess the Pokemon</title>
+    <title>Guess  the  Pokemon</title>
     <!--ultraball favicon-->
     <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
@@ -67,7 +67,7 @@
       <form id="answer">
         <label name = "userAns">Enter your answer</label>
         <input type="text" name="userAns" id="userAns"><br>
-        <input type="submit" id="submit">
+        <input type="submit" id="submit" value="Submit">
         </form><br>
         <!--adds 1 for each correct answer, resets to 0 on Play again-->
       <div class="score" id="score">Score:</div>
