added styling for submit button

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <p id="hint"></p>
       <form id="answer">
         <label name = "userAns">Enter your answer</label>
-        <input type="text" name="userAns" id="userAns"><br>
+        <input type="text" name="userAns" id="userAns"><br><br>
         <input type="submit" id="submit" value="Submit">
         </form><br>
         <!--adds 1 for each correct answer, resets to 0 on Play again-->
